# FlightGear-Simulator-Data-Extraction-and-Display

./: .gitignore  CMakeLists.txt  FlightGearDataExtractorMFC.sln  README.md  main.cpp
FlightGearDataExtractorMFC/: FlightGearDataExtractorMFC.aps  FlightGearDataExtractorMFC.cpp  FlightGearDataExtractorMFC.h  FlightGearDataExtractorMFC.rc  FlightGearDataExtractorMFC.vcxproj  FlightGearDataExtractorMFC.vcxproj.filters  FlightGearDataExtractorMFCDlg.cpp  FlightGearDataExtractorMFCDlg.h  packages.config  resource.h
FlightGearDataExtractorMFC/res/: FlightGearDataExtractorMFC.rc2
FlightGearDataExtractorMFC/x64/Debug/: FlightGearDataExtractorMFC.exe.recipe  FlightGearDataExtractorMFC.res  vc143.idb
FlightGearDataExtractorMFC/x64/Debug/FlightGe.6FFC393B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FlightGearDataExtractorMFC.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
